--- a/college/templates/college/main.html
+++ b/college/templates/college/main.html
@@ -174,12 +174,12 @@
 
 .skills p.clr-ninghty {
     width: 90%;
-    background: #ff4f81;
+    background: mediumseagreen;
     height: 10px;
 }
 .skills p.clr-seventy {
     width: 50%;
-    background: #3369e7;
+    background: green;
     height:10px;
 }
 .skills p.clr-eighty-five {
@@ -189,13 +189,18 @@
 }
 .skills p.clr-seventy{
 width: 70%;
-background: mediumseagreen;
+background: skyblue;
 height: 10px;
 }
 
 .skills p.clr-thirty{
 width: 30%;
 background: orange;
+height: 10px;
+}
+.skills p.clr-fourty{
+width: 40%;
+background: tomato;
 height: 10px;
 }
 .skills-right h5 {
@@ -235,9 +240,9 @@ height: 10px;
 	<section id="home" class="pfblock-image screen-height">
     <div class="home-overlay"></div>
 		<div class="intro">
-			<div class="start">Hello, my name is Devendra Dewangan and I am</div>
-			<h1>Full-Stack Web Developer - You can say that only web developer</h1>
-			<div class="start">creating modern and responsive Web Application</div>
+			<div class="start">Failure is the most important lesson of life where you learn to tackle with problems and difficulties to make you more or more strongger than before.</div>
+			<h1>Don't blame yourself for past problems just start a new chapter of life where you can learn a new skills and knowledge. </h1>
+			<div class="start">It is not just a website it's my resume, my carrier, my achievements.</div>
 		</div>
 
 		<a href="#services">
@@ -350,7 +355,7 @@ height: 10px;
 					
 					<div  class="devicon-python-plain  col-xs-15"><span>PYTHON</span></div>
 					<div  class="devicon-django-plain  col-xs-15"><span>DJANGO</span></div>
-					
+					<div class="devicon-laravel-plain col-xs-15"><span>LARAVEL</span></div>
 					<div  class="devicon-html5-plain  col-xs-15"><span>HTML</span></div>
 					<div class="devicon-php-plain col-xs-15"><span>PHP</span></div>
 					<div class="devicon-mysql-plain col-xs-15"><span>MYSQL</span></div>
@@ -365,8 +370,12 @@ height: 10px;
 								<p class="mb-4 bg clr-seventy"></p>
 								<h5>Python - 60%</h5>
 								<p class="mb-4 bg clr-eighty-five"></p>
+								<h5>Laravel Framework - 40%</h5>
+								<p class="mb-4 bg clr-fourty"></p>
 								<h5>Others - 30%</h5>
 								<p class="mb-4 bg clr-thirty"></p>
+								
+								
 				</div>
 				</div>
 
