--- a/college/templates/college/main.html
+++ b/college/templates/college/main.html
@@ -316,7 +316,7 @@ height: 10px;
 				<div class="col-sm-4">
 					<div class="pfblock-header wow fadeInUp">
 					<div class="card-dev">
-						<img width=100% src="{% static 'college/images/me.jpg' %}" alt="Vladislav Moroshan" style="filter:grayscale(30%);">
+						<img width=100% src="{% static 'college/images/me.jpg' %}"  style="filter:grayscale(30%);" class="rounded-circle>
 						<h2 style="color:black;">Devendra Dewangan</h2>
 						<p class="title">CSE Student</p>
 						<p>Raipur Institute of Technology (RITEE)</p>
